chore: upgrade to scala 2.13 # https://github.com/Open-EO/openeo-geotrellis-kubernetes/issues/35 (#515)
* chore: upgrade to scala 2.13
* chore: upgrade to Spark 3.5.5
# https://github.com/Open-EO/openeo-geotrellis-kubernetes/issues/35