@@ -14,7 +14,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.15.2</version>
+            <version>2.18.2</version>
         </dependency>
         <dependency>
             <groupId>org.locationtech.proj4j</groupId>
@@ -24,7 +24,8 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.68.Final</version>
+            <version>4.1.118.Final</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.openeo</groupId>
@@ -186,7 +187,7 @@
         </dependency>
         <dependency>
             <groupId>ai.catboost</groupId>
-            <artifactId>catboost-spark_3.5_2.12</artifactId>
+            <artifactId>catboost-spark_3.5_2.13</artifactId>
             <version>${catboost-spark.version}</version>
             <scope>compile</scope>
         </dependency>
@@ -231,6 +232,26 @@
                         <include>**/*Spec.*</include>
                         <include>**/*Specs.*</include>
                     </includes>
+                    <argLine>
+                        -XX:+IgnoreUnrecognizedVMOptions
+                        --add-modules=jdk.incubator.vector
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+                        --add-opens=java.base/sun.security.action=ALL-UNNAMED
+                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+                        -Djdk.reflect.useDirectMethodHandle=false
+                        -Dio.netty.tryReflectionSetAccessible=true
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
